--- a/randing/style.css
+++ b/randing/style.css
@@ -1,5 +1,7 @@
 @import url("./style/1_intro.css");
 @import url("./style/2_header.css");
+@import url("./style/3_main.css");
+@import url("./style/4_about.css");
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap%22");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@600&display=swap");
 
