--- a/5-11.css
+++ b/5-11.css
@@ -4,12 +4,17 @@ title{
     margin-bottom: 100px;
 }
 .head{
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
-    
+body{
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    /*원래 body에는 주지 않지만 일단 임시방편으로 해결*/
+}
 .data{ 
     width: 300px;
-    border: 3px solid black;
+    border: 2px solid black;
     height: 40px;
     border-radius: 3px;
     line-height: 35px;
@@ -21,19 +26,25 @@ title{
     width: 350px;
     display: flex; 
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     margin-left: 15px;
     
+    
 }
 .main{
-    border: 8px solid rgb(36, 36, 124);
-    border-style:inset ;
+    box-shadow: rgba(145, 188, 243, 0.705) 5px 5px, rgba(86, 161, 223, 0.829) 10px 10px, rgba(23, 118, 207, 0.815) 15px 15px, rgba(16, 46, 180, 0.699) 20px 20px, rgba(58, 40, 216, 0.767) 25px 25px;
+    background-color: rgb(165, 222, 240);
+    border-style:none;
     width: 400px;
     height: 700px;
     font-size: 11px;
     text-align: center;
     flex-direction: row;
     padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    
 }
 .phone{
     display: flex;
@@ -63,8 +74,14 @@ title{
     margin-left: 160px;
 }
 #sendMessage{
-    border: 3px solid black;
+    border: 2px solid black;
 }
+#sendMessage:hover{
+    background-color: #000000;
+    color: white;
+    cursor: pointer;
+}
+
 #certificationNumber{
     margin-right: 5px;
 }
@@ -81,10 +98,14 @@ title{
     margin-right: 5px;
 }
 #completion{
-    border: 3px solid black;
+    border: 2px solid black;
     width: 160px;
+    cursor: pointer;
 }
-
+#completion:hover {
+    background-color: #000000;
+    color: white;
+}
 .city select {
     width: 305px;
     height: 40px;
@@ -94,7 +115,7 @@ title{
     padding-right: 10px;
     margin-bottom: 10px;
     margin-top: 10px;
-    border: 3px solid black;
+    border: 2px solid black;
 
 }
 .gender{
@@ -105,6 +126,13 @@ title{
 .sign{
     width: 305px;
     height: 40px;
-    border: 3px solid black;
+    cursor: pointer;
+    background-color: white;
+    color: black;
+    border: 2px solid #000000;
 
 }
+.sign:hover {
+    background-color: #000000;
+    color: white;
+  }
